# metrabs

./: .gitignore  AGENTS.md  LICENSE  README.md  flake.nix  main.py  pyproject.toml
metrabs_pytorch/multiperson/: multiperson_model.py  warping.py
