[project]
name = "metrabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "addict",
    "cameralib",
    "hydra-core",
    "imageio",
    "jpeg4py",
    "einops",
    "ultralytics",
    "posepile",
    "tensorflow-hub>=0.16.1",
    "tensorflow==2.15",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[tool.uv.sources]
cameralib = { git = "https://github.com/isarandi/cameralib.git" }
posepile = { git = "https://github.com/isarandi/posepile.git" }
